<resources>
    <!--Activity names-->
    <string name="app_name" translatable="false">Keep Pass</string>
    <string name="getStarted">Get Started</string>
    <string name="newDevice">New device</string>
    <string name="synchronise">Synchronise</string>
    <string name="myCredentials">My credentials</string>
    <string name="settings">Settings</string>

    <!--Widely used strings-->
    <string name="saveText">Save</string>
    <string name="continueText">Continue</string>
    <string name="blankString">blank</string><!--Just to show specific data no matter the languaje-->
    <string name="userName">Name</string>
    <string name="password">Password</string>
    <string name="passErr">Wrong password</string>

    <!--Login strings-->
    <string name="brandDescription">Keep Pass full logo</string>
    <string name="welcomeText">Welcome</string>
    <string name="PasswordBox">Password or private key</string>
    <string name="loginButton">Login</string>
    <string name="firsttimeText">First time using this device or this service?</string>
    <string name="infoAboutText">If you want to learn more about how it works you can watch a short video here or email us to</string>

    <!--Get started strings-->
    <string name="registerText">Please register your info to use the app</string>
    <string name="whyName">(Just to personalize your login)</string>
    <string name="confirmPassBox">Confirm your password</string>
    <string name="passNoMatch">"Passwords don't match"</string>
    <string name="passShort">Your password is too short</string>
    <string name="keepYourKey">This is your private key, you will only have to use it if you forget your password or if you decide to export your credencials, so keep it in a safe place</string>

    <!--New Device strings-->
    <string name="stepDescription">Number of step</string>
    <string name="syncInfo">"Look for the 'Synchronise' section your other device and select 'Add new device', it will show you a QR code. Then, press 'Got it'"</string>
    <string name="gotItText">Got it</string>
    <string name="confirmId">Please confirm this is you</string>
    <string name="syncKeys">"To sync your credentials press 'Continue' on your other device and press 'Got it' to open the scanner"</string>
    <string name="phoneReady">Your device is ready. From now and then you can synchronise it by going to the corresponding section.</string>

    <!--Synchronize strings-->
    <string name="autoSnap">Place the square over the QR code of the other device</string>
    <string name="genQRinfo" >Synchronize my information and settings (to add new devices)</string>
    <string name="genQRcreds" >Synchronize my credentials through a secure QR code</string>
    <string name="or">- OR -</string>
    <string name="addCode">"Generate 'New device' code"</string>
    <string name="genCode">Generate sync code</string>
    <string name="readCode">Scan sync code</string>
    <string name="cancelled">Canceled</string>

    <!--My credentials strings-->
    <string name="search">Search</string>
    <string name="allKeysTab">All</string>
    <string name="favTab">Favs.</string>
    <string name="recientTab">Recients</string>
    <string name="notesTab">Notes</string>
    <string name="myURL" translatable="false"><u>www.example.com</u></string>
    <string name="wantDelete">Do you really want to delete this credential?</string>
    <string name="yesMsg">Yes</string>
    <string name="noMsg">No</string>

    <!--Credential-->
    <string name="addNew">New</string>
    <string name="edit">Edit</string>
    <string name="fillData">Fill the following data</string>
    <string name="siteName">Site name</string>
    <string name="typeNote">Type your note here</string>
    <string name="URL" translatable="false">URL</string>
    <string name="chooseCat">Choose a category (optional)</string>
    <string name="itemCategory">Category</string>
    <string name="genPass">Generate safe password</string>
    <string name="pickColour">Pick a colour</string>
    <string name="itemColour">Colour</string>

    <!--Settings strings-->
    <string name="changePass">Change your password</string>
    <string name="newPass">Type new password</string>
    <string name="tabVisualize">Tabs visualization:</string>
    <string name="textFormat">Names</string>
    <string name="iconFormat">Icons</string>
    <string name="maxAttempts">Max number of attempts to access:</string>
    <string name="chooseTheme">Theme</string>
    <string name="lightTheme">Light</string>
    <string name="darkTheme">Dark</string>
    <string name="waitTime">Waiting time (minutes) before require password again:</string>
    <string name="done">Done</string>

</resources>